# CamBot

./: README.md  ball_tracking.py  ball_tracking.py~  eliminame.txt
Cambot_Motion/: CMakeLists.txt~  package.xml~
Cambot_Motion/launch/: rosserial.launch~
Cambot_Motion/src/ServoControl_ROS/: ServoControl_ROS.ino
cambot_control/cambot_control_msgs/: CMakeLists.txt  package.xml
cambot_control/cambot_controllers/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cambot_control/cambot_description/: package.xml~
cambot_control/cambot_description/meshes/: cambot_camera_collision.stl  cambot_wheel_collision.stl
cambot_control/cambot_description/urdf/: cambot.urdf~
cambot_control/cambot_hw/: CMakeLists.txt  package.xml~
cambot_control/cambot_hw/src/: cambot_hw_interface.cpp  cambot_hw_interface.cpp~
cambot_description/: CMakeLists.txt  CMakeLists.txt~  package.xml
cambot_description/launch/: display.launch  display.launch~  display.rviz
cambot_description/meshes/: cambot.stl  cambot_base.stl  cambot_base_collision.stl  cambot_camera.stl  cambot_camera_support.stl  cambot_camera_support_collision.stl  cambot_servo.stl  cambot_servo_collision.stl  cambot_wheel.stl  servo.stl
cambot_description/urdf/: cambot.urdf  cambot.urdf~  cambotV2.urdf  cambotV2.urdf~  cambotV3.urdf  cambotV3.urdf~
cambot_face_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cambot_face_detector/src/: cambot_face_detector_main.cpp~  cambot_face_detector_node.cpp  cambot_face_detector_node.cpp~  cambot_face_detector_node.h  cambot_face_detector_node.h~
cambot_img_processor/: CMakeLists.txt  package.xml
cambot_img_processor/launch/: cambot_face_detector.launch  cambot_face_detector.launch~  cambot_face_tracker.launch  cambot_face_tracker.launch~  cambot_img_processor.launch  cambot_kalman_filter.launch  cambot_kalman_filter.launch~  usb_camera.launch  usb_camera.launch~
cambot_img_processor/src/: cambot_img_processor_main.cpp  cambot_img_processor_node.cpp  cambot_img_processor_node.cpp~  cambot_img_processor_node.h  cambot_img_processor_node.h~
cambot_kalman_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cambot_kalman_filter/src/: cambot_kalman_filter_main.cpp~  cambot_kalman_filter_node.cpp  cambot_kalman_filter_node.cpp~  cambot_kalman_filter_node.h  cambot_kalman_filter_node.h~
cambot_kalman_filter_V2/: CMakeLists.txt  CMakeLists.txt~  package.xml
cambot_kalman_filter_V2/src/: cambot_kalman_filter_V2_main.cpp  cambot_kalman_filter_V2_main.cpp~  cambot_kalman_filter_V2_node.cpp  cambot_kalman_filter_V2_node.cpp~  cambot_kalman_filter_V2_node.h  cambot_kalman_filter_V2_node.h~
cambot_motion/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cambot_motion/launch/: rosserial.launch
cambot_motion/src/ServoControl_ROS/: ServoControl_ROS.ino  ServoControl_ROS.ino~
cambot_subscriber/: CMakeLists.txt  CMakeLists.txt~
cambot_subscriber/src/: cambot_subscriber_node.cpp  cambot_subscriber_node.cpp~
