<?xml version="1.0"?>
<package>
  <name>cambot_description</name>
  <version>0.0.1</version>
  <description>cambot_description</description>

  <maintainer email="mgenevat@gmail.com">Marc Genevat</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
