<?xml version="1.0"?>
<package>
  <name>cambot_controllers</name>
  <version>0.0.1</version>
  <description>cambot_controllers</description>

  <maintainer email="mgenevat@gmail.com">Marc Genevat</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>


  <!-- <url type="website">http://wiki.ros.org/cambot_hw</url> -->

  <author>Marc Genevat</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cambot_control_msgs</build_depend>
  <build_depend>cambot_description</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>

  <run_depend>cambot_control_msgs</run_depend>
  <run_depend>cambot_description</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>realtime_tools</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<controller_interface plugin="${prefix}/controllers_plugins.xml"/>
  </export>
</package>
